First version of the register-component
- added a directive to check if the passwords are equal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,6 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 html, body {
   background-color: #e2e2e2;
+  height: 100%;
+  width: 100%;
 }
