--- a/src/auth/auth.component.html
+++ b/src/auth/auth.component.html
@@ -1,1 +1,37 @@
-<p>auth</p>
+<div class="container-fluid">
+  <mat-card class="register-card">
+    <mat-card-title class="text-center">
+      Register
+    </mat-card-title>
+    <mat-card-content>
+      <form (ngSubmit)="onSubmit()">
+        <div class="row">
+          <div class="col-12">
+            <mat-form-field>
+              <input matInput placeholder="Email" type="email" #emailField="ngModel" [(ngModel)]="registerForm.email" name="register-email" required>
+              <mat-error *ngIf="emailField.errors?.required">Required</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field>
+              <input matInput placeholder="Password" type="password" #passwordField="ngModel" [(ngModel)]="registerForm.password" name="register-password" required minlength="8">
+              <mat-error *ngIf="passwordField.errors?.required">Required</mat-error>
+              <mat-error *ngIf="passwordField.errors?.minlength">Password needs to be at least 8 characters</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field>
+              <input matInput placeholder="Confirm Password" type="password" appPasswordsEqual="register-password" #passwordConfirmField="ngModel" [(ngModel)]="registerForm.password_confirm" name="register-password-confirm" required minlength="8">
+              <mat-error *ngIf="passwordConfirmField.errors?.required">Required</mat-error>
+              <mat-error *ngIf="passwordConfirmField.errors?.minlength">Password needs to be at least 8 characters</mat-error>
+              <mat-error *ngIf="passwordConfirmField.errors?.passwordsNotEqual">Password are not equal</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 text-center">
+            <button type="submit" mat-raised-button>Submit</button>
+          </div>
+        </div>
+      </form>
+    </mat-card-content>
+  </mat-card>
+</div>
