auth-guard implementation
- added a auth-guard to secure the app
- added a small theme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
+<mat-toolbar color="accent">
+  <div class="col-12 text-center">
+    <span>Demo Application</span>
+  </div>
+  <div class="sign-out">
+    <button mat-button (click)="logout()">
+      <i class="fas fa-sign-out-alt fa-lg"></i>
+    </button>
+  </div>
+</mat-toolbar>
 <router-outlet></router-outlet>
