--- a/src/auth/auth.component.html
+++ b/src/auth/auth.component.html
@@ -4,12 +4,13 @@
       Register
     </mat-card-title>
     <mat-card-content>
-      <form (ngSubmit)="onSubmit()">
-        <div class="row">
+      <form (ngSubmit)="onSubmit(registerForm)" #registerForm="ngForm">
+        <div class="row pt-5">
           <div class="col-12">
             <mat-form-field>
-              <input matInput placeholder="Email" type="email" #emailField="ngModel" [(ngModel)]="registerForm.email" name="register-email" required>
+              <input matInput placeholder="Email" type="email" #emailField="ngModel" [(ngModel)]="registerForm.email" name="register-email" required email>
               <mat-error *ngIf="emailField.errors?.required">Required</mat-error>
+              <mat-error *ngIf="emailField.errors?.email">Invalid email address</mat-error>
             </mat-form-field>
           </div>
           <div class="col-12">
@@ -24,11 +25,14 @@
               <input matInput placeholder="Confirm Password" type="password" appPasswordsEqual="register-password" #passwordConfirmField="ngModel" [(ngModel)]="registerForm.password_confirm" name="register-password-confirm" required minlength="8">
               <mat-error *ngIf="passwordConfirmField.errors?.required">Required</mat-error>
               <mat-error *ngIf="passwordConfirmField.errors?.minlength">Password needs to be at least 8 characters</mat-error>
-              <mat-error *ngIf="passwordConfirmField.errors?.passwordsNotEqual">Password are not equal</mat-error>
+              <mat-error *ngIf="passwordConfirmField.errors?.passwordsNotEqual">Passwords are not equal</mat-error>
             </mat-form-field>
           </div>
-          <div class="col-12 text-center">
-            <button type="submit" mat-raised-button>Submit</button>
+          <div class="col-12 text-center mt-5">
+            <button type="submit" mat-raised-button color="accent">Submit & Login</button>
+          </div>
+          <div class="col-12 text-center mt-5">
+              <a (click)="skipRegistration()" class="skip-registration">Skip registration</a>
           </div>
         </div>
       </form>
