--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
 @import "../node_modules/@fortawesome/fontawesome-free/css/all.min.css";
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-html, body {
+@import "./shared/styles/theme.scss";
+
+@include mat-core();
+@include angular-material-theme($theme);
+
+html,
+body {
   background-color: #e2e2e2;
   height: 100%;
   width: 100%;
+  font-size: 14px;
 }
