Finalize the app
- Changed the responsive look of the filter-section
- Implemented an opacity-animation for the login screen

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <span>Demo Application</span>
   </div>
   <div class="sign-out">
-    <button mat-button (click)="logout()">
+    <button mat-button (click)="logout()" matTooltip="Logout">
       <i class="fas fa-sign-out-alt fa-lg"></i>
     </button>
   </div>
