--- a/src/auth/auth.component.html
+++ b/src/auth/auth.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" @LoginEnterAnimation>
   <mat-card class="register-card">
     <mat-card-title class="text-center">
       Register
